--- a/etape01.html
+++ b/etape01.html
@@ -6,14 +6,11 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
 
-
-
-<header>
-  <div class="logo">
-
-      <a class='gallery' href='image/image-2.png'>
+  <body>
+    <header>
+        <div class="logo">
       <img src="image/image-2.png" alt="bee"></a>
-    </div>
+      </div>
 
   <h1>La Pollinisation des abeilles</h1>
 
@@ -29,10 +26,7 @@
   </style>
 </header>
 
-
-  <body>
-
-
+<section>
 
 <div class="video">
 <video width="600" controls
@@ -51,15 +45,16 @@ poster="images/image1.jpg"
 </video>
 </div>
 <div class="texte">
+
   <h2>Départ de la ruche</h2>
 
 <p>L’abeille est dotée d’une vision trichromatique qui lui permet de percevoir les couleurs et le chemin à suivre pour localiser, au cœur de la fleur, les endroits les plus riches en nectar. Elle est très sensible au parfum dégagé par la fleur, à l’ultraviolet et aux couleurs vives comme le bleu et le jaune.
-
 L’abeille est connue pour être le meilleur pollinisateur et pour cause. Une abeille est capable à elle seule de butiner 250 fleurs par heure, de stocker sur une seule patte 500 000 grains de pollen.
-
-En effet, la liste de ces cultures est très étendue. Des légumes: ail, asperge, aubergine, oignon, betterave, céleri, citrouille, moutarde, ciboulette, choux, concombre, persil, radis, navets,  … Et des fruits,: amande, pêche, poire, pomme, prune, raisin, fraise, châtaigne, framboises, groseilles, …
+En effet, la liste de ces cultures est très étendue.
 </p>
 </div>
+
+</section>
 
 <div class="liste2">
 <ul>
@@ -70,7 +65,5 @@ En effet, la liste de ces cultures est très étendue. Des légumes: ail, asperg
 </ul>
 </div>
 
-
   </body>
-
 </html>
