--- a/etape02.html
+++ b/etape02.html
@@ -5,11 +5,10 @@
     <title>Pollinisation des abeilles</title>
     <link rel="stylesheet" href="styles/main.css">
   </head>
+  <body>
 
   <header>
     <div class="logo">
-
-        <a class='gallery' href='image/image-2.png'>
         <img src="image/image-2.png" alt="bee"></a>
       </div>
 
@@ -23,36 +22,36 @@
         </form>
         </div>
 
-        <style type='text/css'>
-    </style>
+
   </header>
 
-</div>
-    <div class="video">
-    <video width="600" controls
-    poster="images/image1.jpg"
-      poster="index.html" >
-      <source
-        src="etape01.html"
-        type="video/mp4">
-      <source
-        src="https://archive.org/download/ElephantsDream/ed_hd.ogv"
-        type="video/ogg">
-      <source
-        src="https://archive.org/download/ElephantsDream/ed_hd.avi"
-        type="video/avi">
-      Your browser doesn't support HTML5 video tag.
-    </video>
-    </div>
 
-  <body>
+<section>
+  <div class="video">
 
-<div class="texte">
+  <video width="600" controls
+  poster="images/image1.jpg"
+    poster="index.html" >
+    <source
+      src="etape01.html"
+      type="video/mp4">
+    <source
+      src="https://archive.org/download/ElephantsDream/ed_hd.ogv"
+      type="video/ogg">
+    <source>
+      src="https://archive.org/download/ElephantsDream/ed_hd.avi"
+      type="video/avi">
+    Your browser doesn't support HTML5 video tag.
+  </video>
+  </div>
+  <div class="texte">
 
-  <h2>Choisir une fleur</h2>
-<p>Bzz, voilà une abeille. Elle atterrit sur un fleur de prunier, et hop, au travail ! Elle plonge sa langue au cœur de la fleur et aspire le nectar, ce jus sucré que la fleur fabrique pour l’attirer. Hé, hé… En farfouillant dans la fleur, l’abeille toute poilue remue les étamines de la fleur et se couvre de leurs grains de pollen… En allant butiner plus loin,  elle dépose ce pollen sur le pistil de la fleur suivante. C’est ça, la pollinisation. La fleur est pollinisée et fécondée, on aura une prune à la fin de l’été !
-</p>
+    <h2>Choisir une fleur</h2>
+  <p>Bzz, voilà une abeille. Elle atterrit sur un fleur de prunier, et hop, au travail ! Elle plonge sa langue au cœur de la fleur et aspire le nectar, ce jus sucré que la fleur fabrique pour l’attirer. Hé, hé… En farfouillant dans la fleur, l’abeille toute poilue remue les étamines de la fleur et se couvre de leurs grains de pollen… En allant butiner plus loin,  elle dépose ce pollen sur le pistil de la fleur suivante. C’est ça, la pollinisation. La fleur est pollinisée et fécondée, on aura une prune à la fin de l’été !
+  </p>
+  </div>
 
+</section>
 
 
 <div class="liste2">
