--- a/etape03.html
+++ b/etape03.html
@@ -6,48 +6,52 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
 
-  <header>
-    <div class="logo">
 
-        <a class='gallery' href='image/image-2.png'>
+<body>
+  <header>
+
+    <div class="logo">
         <img src="image/image-2.png" alt="bee"></a>
       </div>
 
     <h1>La Pollinisation des abeilles</h1>
 
         <div class="recherche_p">
-
         <form action="/search" id="searchthis" method="get">
         <input id="search" name="q" type="text" placeholder="Rechercher ex : miel, abeille..." />
         <input id="search-btn" type="submit" value="Rechercher" />
         </form>
         </div>
+  </header>
 
-        <style type='text/css'>
-    </style></header>
+<section>
+  <div class="video">
+  <video width="600" controls
+  poster="images/image1.jpg"
+    poster="index.html" >
+    <source
+      src="etape01.html"
+      type="video/mp4">
+    <source
+      src="https://archive.org/download/ElephantsDream/ed_hd.ogv"
+      type="video/ogg">
+    <source
+      src="https://archive.org/download/ElephantsDream/ed_hd.avi"
+      type="video/avi">
+    Your browser doesn't support HTML5 video tag.
+  </video>
+  </div>
 
-  </head>
+<div class="texte">
+
 
   <h2>Buttiner la fleur</h2>
 
-  <body>
-
-    <div class="video">
-    <video width="700" controls
-    poster="images/image1.jpg"
-      poster="index.html" >
-      <source
-        src="etape01.html"
-        type="video/mp4">
-      <source
-        src="https://archive.org/download/ElephantsDream/ed_hd.ogv"
-        type="video/ogg">
-      <source
-        src="https://archive.org/download/ElephantsDream/ed_hd.avi"
-        type="video/avi">
-      Your browser doesn't support HTML5 video tag.
-    </video>
-    </div>
+<p>Il existe autant de pollens différents que de fleurs, chacun avec sa propre composition et valeur nutritive. Pourtant, les abeilles sont capables de sélectionner le plus abondant et le plus nutritif pour leur colonie.
+  Selon ces chercheurs, les abeilles ne feraient que très peu appel au goût pour choisir le pollen. En revanche, elles bénéficient d’un sens de la vue extrêmement développé qui joue un rôle majeur dans leurs recherches. Elles se serviraient des couleurs des fleurs pour déterminer lesquelles butiner en priorité.
+</p>
+</div>
+</section>
 
 <ul>
   <li><a href="etape01.html">Départ de la ruche</a></li>
