--- a/etape04.html
+++ b/etape04.html
@@ -5,12 +5,12 @@
     <title>Pollinisation des abeilles</title>
     <link rel="stylesheet" href="styles/main.css">
   </head>
+
+  <body>
   <header>
     <div class="logo">
-
-        <a class='gallery' href='image/image-2.png'>
         <img src="image/image-2.png" alt="bee"></a>
-      </div>
+        </div>
 
     <h1>La Pollinisation des abeilles</h1>
 
@@ -21,18 +21,13 @@
         <input id="search-btn" type="submit" value="Rechercher" />
         </form>
         </div>
+  </header>
 
-        <style type='text/css'>
-    </style></header>
-
-  </head>
-  <h2>Retour à la ruche</h2>
-
-    <body>
+<section>
 
       <div class="video">
 
-      <video width="700" controls
+      <video width="600" controls
       poster="images/image1.jpg"
         poster="index.html" >
         <source
@@ -45,9 +40,18 @@
           src="https://archive.org/download/ElephantsDream/ed_hd.avi"
           type="video/avi">
         Your browser doesn't support HTML5 video tag.
-
       </video>
       </div>
+
+<div class="texte">
+
+      <h2>Retour à la ruche</h2>
+<p>Quand la charge est suffisante, l’ouvrière revient à sa ruche et dépose sa récolte dans les alvéoles, au dessus et à coté du nid à couvain. On peut souvent voir des ouvrières enfoncer leur tête dans une alvéole pour tasser les pelotes.</p>
+</div>
+  </section>
+
+
+
 <ul>
   <li><a href="etape01.html">Départ de la ruche</a></li>
   <li><a href="etape02.html">Choisir une fleur</a></li>
